<resources>
    <string name="app_name">TrackBuddies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Dashboard">Dashboard</string>
    <string name="menu_saude">Saúde</string>
    <string name="menu_comunidade">Comunidade</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_corridas">Corridas</string>
    <string name="menu_notificacoes">Notificações</string>
</resources>