<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Perfil"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/Corridas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_corridas" />
        <item
            android:id="@+id/Comunidade"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_comunidade" />
        <item
            android:id="@+id/Saude"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_saude" />
        <item
            android:id="@+id/Notificacoes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_notificacoes" />
    </group>
</menu>