<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/Dashboard">

    <fragment
        android:id="@+id/Dashboard"
        android:name="com.example.trackbuddies.ui.home.HomeFragment"
        android:label="@string/menu_Dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/Corridas"
        android:name="com.example.trackbuddies.ui.gallery.GalleryFragment"
        android:label="@string/menu_corridas"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/Comunidade"
        android:name="com.example.trackbuddies.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_comunidade"
        tools:layout="@layout/fragment_slideshow" />
</navigation>